[tool.poetry]
name = "llmsearch"
version = "0.1.0"
description = ""
authors = ["DonnaMayYap <donnamayyap@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
